Update source by adding swagger specs
