# internal/controller/userController.go
@@ -23,8 +23,17 @@ type UserController struct {
 }
 
 // ListUsers returns a list of users.
-// swagger:route GET /users users listUsers
-// Returns a list of users.
+//
+// @Summary List users
+// @Description Retrieve a list of users
+// @ID list_users
+// @Tags users
+// @Accept json
+// @Produce json
+// @Success 200 {array} User "List of users"
+// @Failure 400 {object} ErrorResponse "Invalid request"
+// @Failure 500 {object} ErrorResponse "Server error"
+// @Router /users [get]
 func (uc *UserController) ListUsers(w http.ResponseWriter, r *http.Request) {
 
 	userList, err := uc.UserService.GetAllUsers()
@@ -38,9 +47,17 @@ func (uc *UserController) ListUsers(w http.ResponseWriter, r *http.Request) {
 	utils.ResponseJson(w, http.StatusOK, userList)
 }
 
-// GetUser returns a user given its id.
-// swagger:route GET /users/{userId} user
-// Returns a given user.
+// GetUser handles GET requests for retrieving a user by ID.
+//
+// swagger:route GET /users/{userId} users getUser
+//
+// Get a user by ID.
+//
+// This will show a single user based on the provided user ID.
+// Responses:
+//
+//	200: userResponse
+//	404: errorResponse
 func (uc *UserController) GetUser(w http.ResponseWriter, r *http.Request) {
 
 	userId := chi.URLParam(r, "userId")
@@ -56,9 +73,23 @@ func (uc *UserController) GetUser(w http.ResponseWriter, r *http.Request) {
 	utils.ResponseJson(w, http.StatusOK, user)
 }
 
-// SaveUser saves a user.
-// swagger:route POST /users/{userId} user
-// Saves a given user.
+// SaveUser creates a new user
+//
+// This will create a new user based on the information provided in the request body.
+//
+// swagger:route POST /users createUser
+//
+// Consumes:
+// - application/json
+//
+// Produces:
+// - application/json
+//
+// Responses:
+//
+//	201: UserResponse
+//	400: BadRequestResponse
+//	500: InternalServerErrorResponse
 func (uc *UserController) SaveUser(w http.ResponseWriter, r *http.Request) {
 
 	var body model.User
@@ -83,9 +114,21 @@ func (uc *UserController) SaveUser(w http.ResponseWriter, r *http.Request) {
 
 }
 
-// UpdateUser updates a user.
-// swagger:route PUT /users/{userId} user
-// Updates a given user.
+// UpdateUser updates a user by ID.
+//
+// @Summary Update a user
+// @Description Update a user by ID
+// @ID update_user
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param id path int true "User ID"
+// @Param user body User true "User data"
+// @Success 200 {object} UserResponse "User successfully updated"
+// @Failure 400 {object} ErrorResponse "Invalid ID or payload"
+// @Failure 404 {object} ErrorResponse "User not found"
+// @Failure 500 {object} ErrorResponse "Server error"
+// @Router /users/{id} [put]
 func (uc *UserController) UpdateUser(w http.ResponseWriter, r *http.Request) {
 
 	log.Info.Printf("User update service ")
@@ -113,9 +156,20 @@ func (uc *UserController) UpdateUser(w http.ResponseWriter, r *http.Request) {
 
 }
 
-// DeleteUser deletes a user.
-// swagger:route DELETE /users/{userId} user
-// Deletes a given user.
+// DeleteUser deletes a user by ID.
+//
+// @Summary Delete a user
+// @Description Delete a user by ID
+// @ID delete_user
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param id path int true "User ID"
+// @Success 200 {string} string "User successfully deleted"
+// @Failure 400 {object} ErrorResponse "Invalid ID"
+// @Failure 404 {object} ErrorResponse "User not found"
+// @Failure 500 {object} ErrorResponse "Server error"
+// @Router /users/{id} [delete]
 func (uc *UserController) DeleteUser(w http.ResponseWriter, r *http.Request) {
 
 	userId := chi.URLParam(r, "userId")
